# gr-flaress

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md  TO DO  install_module.sh
Final Report/: Front_page.html
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.flaress
examples/: carrier_sweep.grc  carrier_sweep.py  residual_carrier.py  residual_carrier_generation.grc
grc/: CMakeLists.txt  flaress_add_const_xx.block.yml  flaress_add_const_xx.xml  flaress_add_xx.block.yml  flaress_add_xx.xml  flaress_debug_func_probe.block.yml  flaress_debug_func_probe.xml  (+38 more)
python/flaress/bindings/: CMakeLists.txt  add_const_double_python.cc  add_const_int64_python.cc  add_double_python.cc  add_int64_python.cc  debug_func_probe_python.cc  divide_double_python.cc  divide_int64_python.cc  fixed_point_math_cc_python.cc  fixed_point_math_dd_python.cc  fixed_point_math_ff_python.cc  float_to_double_python.cc  float_to_int64_python.cc  int_to_int64_python.cc  integer_math_ii_python.cc  integer_math_ll_python.cc  multiply_const_double_python.cc  multiply_const_int64_python.cc  multiply_double_python.cc  multiply_int64_python.cc  null_sink_python.cc  null_source_python.cc  python_bindings.cc  snr_python.cc  sub_double_python.cc  sub_int64_python.cc  vector_sink_double_python.cc  vector_sink_int64_python.cc  vector_source_double_python.cc  vector_source_int64_python.cc
python/flaress/bindings/docstrings/: add_const_double_pydoc_template.h  add_const_int64_pydoc_template.h  add_double_pydoc_template.h  add_int64_pydoc_template.h  debug_func_probe_pydoc_template.h  divide_double_pydoc_template.h  divide_int64_pydoc_template.h  fixed_point_math_cc_pydoc_template.h  fixed_point_math_dd_pydoc_template.h  fixed_point_math_ff_pydoc_template.h  float_to_double_pydoc_template.h  float_to_int64_pydoc_template.h  int_to_int64_pydoc_template.h  integer_math_ii_pydoc_template.h  integer_math_ll_pydoc_template.h  multiply_const_double_pydoc_template.h  multiply_const_int64_pydoc_template.h  multiply_double_pydoc_template.h  multiply_int64_pydoc_template.h  null_sink_pydoc_template.h  null_source_pydoc_template.h  snr_pydoc_template.h  sub_double_pydoc_template.h  sub_int64_pydoc_template.h  vector_sink_double_pydoc_template.h  vector_sink_int64_pydoc_template.h  vector_source_double_pydoc_template.h  vector_source_int64_pydoc_template.h
(+205 files in other folders)
